🔁 Fixed accessibility on mobile
- Updated index.html
- Updated style.css (media queries)

--- a/style.css
+++ b/style.css
@@ -37,8 +37,13 @@ body {
 /***************************/
 
 .alert {
-    /* height: 32px; */
-    background: #FFBB00;
+    /* Use this color in case of information. */
+    background: #005499;
+    color: var(--color-white);
+    
+    /* Use these color in case of warning. */
+    /* background: #ffbb00; */
+    /* color: var(--color-black); */
     
     position: absolute;
     width: 100%;
@@ -49,8 +54,10 @@ body {
     align-items: center;
     justify-content: space-around;
     max-height: 40px;
+    z-index: 1;
+    text-align: center;
     
-    /* display: none; */
+    display: none;
 }
 
 .alert.appAnimated {
@@ -227,7 +234,7 @@ body {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 150%;
+    width: 200%;
     height: 100%;
     background: var(--color-white);
     z-index: -1;
@@ -325,7 +332,7 @@ body {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 150%;
+    width: 200%;
     height: 100%;
     background: var(--color-white);
     z-index: -1;
@@ -408,7 +415,7 @@ body {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 150%;
+    width: 200%;
     height: 100%;
     background: var(--color-white);
     z-index: -1;
@@ -648,7 +655,8 @@ body {
 }
 
 .footer .links .item:hover {
-    background: var(--color-gray);
+    background: var(--color-white);
+    border: solid 1px var(--color-white);
 }
 
 .footer .links .item img {
@@ -681,4 +689,137 @@ body {
 
 .footer .infos a:hover {
     text-decoration: underline;
+}
+
+/***************************/
+/* >>> Mobile Adaptation    /
+/***************************/
+
+@media screen and (max-width: 1000px) {
+    
+    * {
+        transition: all 0s;
+    }
+    
+    .content {
+        margin: 32px;
+    }
+    
+    .work, .articles, .contact, .footer {
+        margin-top: 32px;
+    }
+    
+    .home {
+        padding: 100px 32px;
+    }
+    
+    .home .emphasis {
+        font-size: 1em;
+        text-align: center;
+    }
+    
+    .home .text {
+        font-size: 2em;
+        text-align: center;
+    }
+    
+    .home .links {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .home .links .item {
+        padding-bottom: 4px;
+    }
+    
+    .work {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+        gap: 32px;
+        grid-template-areas:
+        "."
+        ".";
+    }
+    
+    .work .right {
+        padding: 48px;
+        background: #856306;
+    }
+    
+    .work .right .title {
+        font-size: 2em;
+    }
+    
+    .work .right .button {
+        display: none;
+    }
+    
+    .articles {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+        gap: 32px;
+        grid-template-areas:
+        "."
+        ".";
+    }
+    
+    .articles .right {
+        padding: 48px;
+        grid-row: 1;
+        align-items: start;
+        background: #856306;
+    }
+    
+    .articles .right .title {
+        font-size: 2em;
+    }
+    
+    .articles .box {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .contact {
+        padding: 48px 48px;
+        background: #856306;
+    }
+    
+    .contact .title {
+        font-size: 2em;
+    }
+    
+    .contact .button {
+        border: none;
+        padding: 0;
+        width: 100%;
+        border-radius: 0;
+    }
+    
+    .contact .button:hover {
+        color: var(--color-white);
+    }
+    
+    .contact .button:hover::before {
+        transform: translateX(-75%);
+    }
+    
+    .contact .button img {
+        border: none;
+    }
+    
+    .contact .button:hover img {
+        filter: invert(0);
+        box-shadow: none;
+    }
+    
+    .footer {
+        padding: 64px 12px 32px 12px;
+    }
+    
+    .footer p {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
 }
